Header spacing fixed

--- a/css/agency.css
+++ b/css/agency.css
@@ -275,7 +275,7 @@ header {
 }
 
 header .intro-text {
-    padding-top: 100px;
+    padding-top: 650px;
     padding-bottom: 50px;
 }
 
